# mdwiki

./: Cargo.toml  README.md  mdwiki.toml
files/: README.md  default_book.toml  default_gitignore  summary_head.md  theme_override_head.html.hbs
src/: config.rs  main.rs  routes.rs  utils.rs  webapp.rs  wiki.rs
templates/: base.html.tera  edit_page.html.tera  login.html.tera  mdwiki_script.js.tera  new_page.html.tera  upload_image.html.tera
