[package]
name = "mdwiki"
version = "0.1.0"
authors = ["Jonas Bakken <jonasxb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4"
git2 = "0.13"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features=["tera_templates", "serve", "helmet"]}
serde = "1.0"
log = "0.4"
env_logger = "0.8"
rand = "0.8"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
